Add entire HTML skeleton and all initial CSS styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-  
+      <div class="title">
+        <h1>✨ Self Care Center ✨<h1>
+      <div>
+      <div>
+        <h2>Which type of message?</h2>
+      </div>
+      <div class="form-box">
+        <form>
+          <div class="buttons">
+            <input type="radio" name="type" value"affirmation" /> affirmation
+            <input type="radio" name="type" value"mantra" /> mantra
+          </div>
+          <div class="recieve">
+            <button class="message">Recieve Message</button>
+          </div>
+        </form>
+      </div>
+      <div class="sound-box">
+        <img src = "meditate.svg" alt="Meditating Human"/>
+      </div>
+    <script type="text/javascript" src="meditate.svg"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
