Finish initial comp card

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         </form>
       </div>
       <div class="sound-box">
-        <img src = "meditate.svg" alt="Meditating Human"/>
+        <img class="meditating-human" src="assets/meditate.svg" alt="Meditating Human"/>
       </div>
-    <script type="text/javascript" src="meditate.svg"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
