Add affirmation and mantra arrays

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div class="form-box">
         <form>
           <div class="buttons">
-            <input type="radio" name="type" value"affirmation" /> affirmation
-            <input type="radio" name="type" value"mantra" /> mantra
+            <input type="radio" name="type" value"affirmation" id="affirmation"/> affirmation
+            <input type="radio" name="type" value"mantra" id="mantra" /> mantra
           </div>
           <div class="recieve">
             <button class="message">Recieve Message</button>
