Add message event listener, clickOnMessageButton, change functions

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div class="form-box">
         <form>
           <div class="buttons">
-            <input type="radio" name="type" value"affirmation" id="affirmation"/> affirmation
-            <input type="radio" name="type" value"mantra" id="mantra" /> mantra
+            <input class="affirmation" type="radio" name="type" value"affirmation"/> affirmation
+            <input class="mantra" type="radio" name="type" value"mantra"/> mantra
           </div>
           <div class="recieve">
-            <button class="message">Recieve Message</button>
+            <input type="submit" value="Receive Message" class="button" id="receive-message-button">
           </div>
         </form>
       </div>
