Add clear button and disapear clear button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         </form>
       </div>
       <div class="sound-box">
-        <img class="meditating-human" src="assets/meditate.svg" alt="Meditating Human"/>
+        <img class="meditating-human" id="meditating-human" src="assets/meditate.svg" alt="Meditating Human"/>
+      </div>
+      <div class="clear-button">
+        <input type="reset" value="Clear Message" class="clear-button hidden" id="clear-message-button">
       </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
